--- a/index.html
+++ b/index.html
@@ -5,6 +5,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Calculator</title>
   <link rel="stylesheet" href="style.css">
+     <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            padding-top:40px;
+        }
+        .calculator {
+            height:200px;
+            width: 300px;
+            margin: 0 auto;
+            border: 1px solid #000000;
+            padding: 10px;
+            padding-top:20px;
+            padding-bottom: 30px;
+            background-color: #a4e7ed;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+        input[type="text"] {
+            width: 70%;
+            padding: 10px;
+            margin-bottom: 10px;
+            font-size: 18px;
+        }
+
+       
+        
+        .btn {
+            width: 40px;
+            height: 30px;
+            font-size: 20px;
+            margin: 5px;
+            cursor: pointer;
+        }
+        .btn.operator {
+            background-color: #f0ad4e;
+            color: #2c2828;
+        }
+        .btn.clear {
+            background-color: #d9534f;
+            color: #fff;
+        }
+    </style>
 </head>
 <body>
     <div class="calculator">
